--- a/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
+++ b/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="curriculumForm" (ngSubmit)="teste(curriculumForm.value)">
         <mat-form-field class="campo">
             <mat-label>Nome</mat-label>
-            <input matInput type="text" placeholder="Nome" formControlName="nome">
+            <input matInput type="text" ng placeholder="Nome" formControlName="nome">
         </mat-form-field>
         <mat-form-field class="campo">
             <mat-label>Email</mat-label>
@@ -10,11 +10,11 @@
         </mat-form-field>
         <mat-form-field class="campo">
             <mat-label>Celular</mat-label>
-            <input matInput type="text" placeholder="Celular" formControlName="celular">
+            <input matInput type="text" mask="(00) 0 0000-0000" placeholder="Celular" formControlName="celular">
         </mat-form-field>
         <mat-form-field class="campo">
             <mat-label>Telefone</mat-label>
-            <input matInput type="text" placeholder="Telefone" formControlName="telefone">
+            <input matInput type="text" mask="(00) 0000-0000" placeholder="Telefone" formControlName="telefone">
         </mat-form-field>
         <mat-form-field appearance="fill" class="lastComponent">
             <mat-label>Data de nascimento</mat-label>
@@ -26,6 +26,7 @@
         <fieldset formGroupName="endereco" class="endereco">
             <mat-form-field class="campo">
                 <mat-label>Cep</mat-label>
+   
                 <input matInput type="text" placeholder="Cep" formControlName="cep">
             </mat-form-field>
             <mat-form-field class="campo">
@@ -91,7 +92,7 @@
                 </mat-form-field>
                 <mat-form-field class="campo">
                     <mat-label>Celular</mat-label>
-                    <input matInput type="text" placeholder="Telefone de contato" formControlName="celular">
+                    <input matInput type="text" mask="(00) 0 0000-0000" placeholder="Telefone de contato" formControlName="celular">
                 </mat-form-field>
             </fieldset>
         </fieldset>
