--- a/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.scss
+++ b/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.scss
@@ -24,4 +24,11 @@ form{
   .redeSocial{
     width: 100%;
   }
+
+  .lista{
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+  }
 }
