Update CursosComponent; Responsabilidade de cursos centralizada no componente;

--- a/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
+++ b/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
@@ -75,7 +75,7 @@
         
         <app-empregos [curriculumForm]="curriculumForm" [listaEmprego]="pessoa.empregos"></app-empregos>
         
-        <app-cursos [curriculumForm]="curriculumForm"></app-cursos>
+        <app-cursos [curriculumForm]="curriculumForm" [listaCurso]="pessoa.cursos"></app-cursos>
 
         <app-habilidades [curriculumForm]="curriculumForm"></app-habilidades>
 
