Ajuste HabilidadesComponent; Centralizando responsabilidade das habilidades em HabilidadesComponent;

--- a/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
+++ b/curriculum-gen-frontend/src/app/components/relatorio/relatorio.component.html
@@ -77,7 +77,7 @@
         
         <app-cursos [curriculumForm]="curriculumForm" [listaCurso]="pessoa.cursos"></app-cursos>
 
-        <app-habilidades [curriculumForm]="curriculumForm"></app-habilidades>
+        <app-habilidades [curriculumForm]="curriculumForm" [listaHabilidade]="pessoa.habilidades"></app-habilidades>
 
         <button type="submit" [disabled]="false">Gerar curriculum</button>
     </form>
